--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@400;700&display=swap');
 
-*, *::before, *::after{
+*,
+*::before,
+*::after {
     box-sizing: border-box;
-    /* outline: 1px solid red; */
 }
 
 :root {
@@ -45,7 +46,7 @@ h2 {
     text-align: center;
 }
 
-.flip-card{
+.flip-card {
     font-size: 2rem;
     display: flex;
     flex-direction: column;
@@ -54,7 +55,7 @@ h2 {
     position: relative;
 }
 
-.top-flip, 
+.top-flip,
 .bottom-flip {
     position: absolute;
 }
@@ -66,16 +67,16 @@ h2 {
 }
 
 .bottom-flip {
-    bottom : 0;
+    bottom: 0;
     animation: flip-bottom 0.5s ease-out 0.5s;
     transform-origin: top;
     transform: rotateX(90deg);
 }
 
-.top, 
+.top,
 .bottom,
 .top-flip,
-.bottom-flip{
+.bottom-flip {
     height: 33px;
     width: 80px;
     padding: 21px 16px;
@@ -84,15 +85,16 @@ h2 {
     text-align: center;
 }
 
-.top, .top-flip{
+.top,
+.top-flip {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     border-bottom: 0.5px solid rgba(0, 0, 0, 0.7);
-    /* background-color: var(--dark-desaturated-blue); */
     background-color: rgb(48, 50, 78);
 }
 
-.bottom, .bottom-flip{
+.bottom,
+.bottom-flip {
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -102,26 +104,56 @@ h2 {
     box-shadow: 0 2px rgb(71, 83, 115, 0.2) inset;
 }
 
-p{
+p {
     font-weight: 700;
     letter-spacing: 1.5px;
     color: var(--grayish-blue);
     margin-top: 40px;
 }
 
-.footer{
+.footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     overflow: hidden;
 }
 
-img {
-    width: 180%;
+.footer>img {
+    width: 250%;
 }
 
-.hide{
-    display: none;
+.media {
+    position: absolute;
+    bottom: 35%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+}
+
+.media>span {
+    margin-right: 10px;
+    cursor: pointer;
+    height: min-content;
+}
+
+.media > span:hover,
+.media > span:active {
+    filter: invert(60%) sepia(43%) saturate(6017%) hue-rotate(315deg) brightness(109%) contrast(97%);
+}
+
+.attribution {
+    position: absolute;
+    left: 50%;
+    bottom: 15px;
+    transform: translateX(-50%);
+    font-size: 0.8rem;
+    width: 95%;
+}
+
+
+.title {
+    margin-top: 1.2rem;
+    font-size: 0.8rem;
 }
 
 @keyframes flip-top {
@@ -137,7 +169,7 @@ img {
 }
 
 @media (min-width: 376px) {
-    .flip-card{
+    .flip-card {
         font-size: 5rem;
     }
 
@@ -154,7 +186,16 @@ img {
         padding: 27px 16px;
     }
 
-    img {
+    .footer > img {
         width: 100%;
+    }
+
+    .media>span {
+        margin-right: 25px;
+    }
+
+    .attribution {
+        font-size: 1rem;
+        bottom: 1vw;
     }
 }
